Enhance input validation and exception handling across utility classes. Add JUnit tests for improved coverage and validate logger output behavior. Configure JaCoCo rules for deterministic test coverage enforcement.